--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ matrix:
     - rvm: 2.2.10
       os: linux
     - rvm: 2.2.10
-      os: linux-ppc64le
+      arch: linux-ppc64le
     - rvm: 2.4.6
       os: linux
     - rvm: 2.4.6
-      os: linux-ppc64le
+      arch: linux-ppc64le
     - rvm: 2.5.5
       os: linux
     - rvm: 2.6.3
@@ -24,7 +24,7 @@ matrix:
     - rvm: ruby-head
       os: linux
     - rvm: ruby-head
-      os: linux-ppc64le
+      arch: linux-ppc64le
     - rvm: 2.1.10
       os: osx
       osx_image: xcode8.3 # OSX 10.12
