--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,12 @@ matrix:
     - rvm: 2.2.10
       os: linux
     - rvm: 2.2.10
+      os: linux
       arch: linux-ppc64le
     - rvm: 2.4.6
       os: linux
     - rvm: 2.4.6
+      os: linux
       arch: linux-ppc64le
     - rvm: 2.5.5
       os: linux
@@ -24,6 +26,7 @@ matrix:
     - rvm: ruby-head
       os: linux
     - rvm: ruby-head
+      os: linux
       arch: linux-ppc64le
     - rvm: 2.1.10
       os: osx
