--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ matrix:
       os: linux
     - rvm: 2.2.10
       os: linux
-      arch: linux-ppc64le
+      arch: ppc64le
     - rvm: 2.4.6
       os: linux
     - rvm: 2.4.6
       os: linux
-      arch: linux-ppc64le
+      arch: ppc64le
     - rvm: 2.5.5
       os: linux
     - rvm: 2.6.3
@@ -27,7 +27,7 @@ matrix:
       os: linux
     - rvm: ruby-head
       os: linux
-      arch: linux-ppc64le
+      arch: ppc64le
     - rvm: 2.1.10
       os: osx
       osx_image: xcode8.3 # OSX 10.12
