--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ before_install:
   - gem update --system=2.7.8
 
 sudo: false
-dist: trusty # for TLSv1.2 support
+#dist: trusty # for TLSv1.2 support
 
 addons:
   apt:
